finished basic bouncing ball

--- a/src/css/PreviewCard.scss
+++ b/src/css/PreviewCard.scss
@@ -4,6 +4,7 @@
  margin: 10px;
  background-color: $mid-teal;
  border-radius: 10px;
+ width:25%;
  &:hover{ //TODO: animate
      background-color: $mid-blue;
      box-shadow: 4px 4px $mid-teal;
