--- a/src/css/Home.scss
+++ b/src/css/Home.scss
@@ -1,7 +1,9 @@
 @import 'colors';
 
 .home{
-    background-color:#1F1825;
+    
+
+    background-color:$bg;
     color: white;
     width: 100%;
     height: 100%;
@@ -17,11 +19,13 @@
         width: 90%;
     }
     .home-heading{
-        background-color:#1F1825;
+        background-color:$bg;
         padding-bottom: 2em;
     }
     //TODO: make flexbox for previewcards
     .card-container{
         display:grid;
+        grid-template-columns: auto;
+
     }
 }
